ui: minor fixes for mobile devices

--- a/src/index.slim
+++ b/src/index.slim
@@ -145,17 +145,17 @@ html
             ul
               li
                 | Email an die Liste:
-                a< href='mailto:umverteiler@lists.honkgong.info'
+                a.is-nowrap< href='mailto:umverteiler@lists.honkgong.info'
                   | umverteiler@lists.honkgong.info
 
               li
                 | Probleme, Anfragen, etc.:
-                a< href='mailto:umverteiler-owner@lists.honkgong.info'
+                a.is-nowrap< href='mailto:umverteiler-owner@lists.honkgong.info'
                   | umverteiler-owner@lists.honkgong.info
 
               li
                 | Abmelden:
-                a< href='mailto:umverteiler-leave@lists.honkgong.info'
+                a.is-nowrap< href='mailto:umverteiler-leave@lists.honkgong.info'
                   | umverteiler-leave@lists.honkgong.info
 
             p
@@ -171,7 +171,7 @@ html
             h2 id='finance'
               | Finanzen
 
-          .column.is-3.is-hidden-touch
+          .column.is-3
             .card
               .card-header
                 .card-header-title
