--- a/src/style.sass
+++ b/src/style.sass
@@ -3,3 +3,6 @@ $fa-font-path: "./fonts"
 @import "../node_modules/bulma/bulma.sass"
 @import "../node_modules/@fortawesome/fontawesome-free/scss/solid.scss"
 @import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+
+.is-nowrap
+  white-space: nowrap
