--- a/src/index.slim
+++ b/src/index.slim
@@ -164,6 +164,85 @@ html
             h2 id='caveats'
               | Einschränkungen
 
+            p
+              | In den letzten Jahren haben sich im Internet ein paar
+                Technologien zur Bekämpfung von Spam und Phishing
+                durchgesetzt, die die Nutzung von Mailinglisten und damit auch
+                den Umverteiler einschränken. Ohne zu technisch zu werden,
+                wollen wir an dieser Stelle kurz umreißen worum es geht und
+                darüber aufklären wer davon konkret wie betroffen ist.
+
+            p
+              | Die erst relevante Technologie ist
+              a< href='https://de.wikipedia.org/wiki/Sender_Policy_Framework'
+                | SPF
+              | . Mittels SPF können Mailserver feststellen, ob eine Email
+                von einem Mailserver der Domain-Inhaber*innen der angegeben
+                Absendeadresse kommt. Also ob die Email von
+              em<> ticket@deutschebahn.com
+              | wirklich von einem Server der Deutschen Bahn kommt.
+                Das betrifft den Umverteiler, da er Emails im Namen
+                Anderer, nämlich euch, versendet.
+
+            p
+              | Die zweite Technologie heißt
+              a< href='https://de.wikipedia.org/wiki/DomainKeys'
+                | DKIM
+              | . Mittels DKIM können Mailserver ausgehende Emails signieren
+                und durch Überprüfung der Signatur eingehender Emails prüfen,
+                ob diese auf ihrem weiten Weg durch das Internet von
+                Zwischenstationen verändert wurden. Das betrifft den
+                Umverteiler, da er dem Betreff ein freundliches [umverteiler]
+                voranstellt und dem Nachrichteninhalt eine Fußnote hinzufügt.
+
+            p
+              | Die dritte und entscheidende Technologie heißt
+              a< href='https://de.wikipedia.org/wiki/DMARC'
+                | DMARC
+              | . Mittels DMARC können Domain-Inhaber*innen festlegen was mit
+                Emails, deren Absendeadresse auf ihre Domain verweist,
+                passieren soll, wenn die Überprüfung von SPF und/oder DKIM
+                fehlschlägt. Die Deutsche Bahn kann also darum bitten, dass
+                Emails in ihrem Namen von einem fremden Server, die auch noch
+                verändert wurden, nicht angenommen werden. Dieser Bitte kommen
+                inzwischen einige Emailprovider nach.
+
+            p
+              | Genau für den Anwendungsfall der Deutschen Bahn ist dieses
+                Konzept entworfen wurden, um Phishing vorzubeugen. Allerdings
+                hat sich auch Yahoo dazu entschieden diese Einstellung für ihre
+                Domain zu setzen, obwohl Emailprovidern für Privatkunden
+                explizit davon abgeraten wird. Inzwischen wurde Yahoo von Oath
+                (Verizon) gekauft und diese Einstellung wurde für alle anderen
+                Domains des Unternehmens übernommen.
+
+            p
+              strong>
+                | Arrr, was heißt das denn jetzt?
+              | Emails von Yahoo, AOL und RocketMail Adressen an den
+                Umverteiler können nicht an alle Mitglieder zugestellt werden.
+                Auch ProtonMail Nutzer*innen sind betroffen.
+
+            p
+              strong>
+                | Arrr, wie grauenhaft. Was kann ich tun?
+              | Im Moment hilft leider nur der Wechsel des Emailproviders und
+                sei es nur für eure Umverteiler-Emails. Vielleicht ist das auch
+                guter Zeitpunkt sich mal mit den Datenschutznerds von
+              a<> href='https://posteo.de/de'
+                | posteo.de
+              | auseinanderzusetzen.
+
+            p
+              strong>
+                | Hmm, ok. Wie geht's weiter?
+              | Es gibt eine neue Technologie am Horizont names
+              a< href='https://en.wikipedia.org/wiki/Authenticated_Received_Chain'
+                | ARC
+              | . Wen die großen Player mitspielen, könnte ARC die oben
+                genannten Probleme lösen. Das wird sich in nächster Zeit
+                herausstellen.
+
             h2 id='finance'
               | Finanzen
 
