--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,7 @@ html
       .container
         .navbar-brand
           a.navbar-item(href='/')
-            img(src='logo.png' width='121' height='28')
+            include logo.svg
           a.navbar-burger.burger(href='#' data-toggle-class='is-active' data-toggle-class-target='#navbar-menu')
             span
             span
