--- a/src/style.sass
+++ b/src/style.sass
@@ -9,3 +9,12 @@ $fa-font-path: "./fonts"
 
 .card:not(:last-child)
   margin-bottom: 0.75rem
+
+.navbar
+  .navbar-brand
+    svg
+      width: auto
+      height: auto
+      max-height: 1.75rem
+      path
+        fill: $text !important
